--- a/app/static/styles/schedule.css
+++ b/app/static/styles/schedule.css
@@ -53,9 +53,10 @@
 
 .cart-spot-name {
     margin-left: 10px;
-    font-size: 20px;
+    font-size: 16px;
     display: inline-block;
     margin-top: 15px;
+    width: 75%;
 }
 
 .cart-add-icon {
@@ -125,4 +126,10 @@
     margin-left: 10px;
     margin-top: 20px;
     height: 100%;
+}
+
+.save-error-msg {
+    color: red;
+    font-size: 15px;
+    margin-left: 10px;
 }
