--- a/app/templates/city.html
+++ b/app/templates/city.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" type="text/css" href="/dev/static/styles/city.css">
     <link rel="stylesheet" type="text/css" href="/dev/static/js/jqwidgets/styles/jqx.base.css">
     <link rel="stylesheet" type="text/css" href="/dev/static/js/jqwidgets/styles/jqx.energyblue.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
@@ -17,6 +16,9 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="/dev/static/js/city.js"></script>
+    <script>
+        var userCart = '{{ userCart }}';
+    </script>
 </head>
 {% block content %}
 
@@ -27,9 +29,9 @@
     <div class="city-info-block">
         <div>
             <p class="city-name">{{ cityItem.name }}</p>
-            <div class="city-cart-icon-block" id="scheduleDiv">
-                <img src="/dev/static/assets/add-icon.png" class="city-cart-icon">
-            </div>
+            <a class="city-cart-icon-block" id="scheduleDiv" style="cursor: pointer">
+                <img src="/dev/static/assets/cart.png" class="city-cart-icon">
+            </a>
         </div>
         <div class="city-desc-block">
             <span>{{ cityItem.country }}</span>
@@ -45,24 +47,26 @@
     {% for spot in spots %}
     <div class="spot-block">
         <div class="spot-image-block">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carousel{{spot.spotId}}" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carousel{{spot.spotId}}" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel{{spot.spotId}}" data-slide-to="1"></li>
+                    <li data-target="#carousel{{spot.spotId}}" data-slide-to="2"></li>
+                    <li data-target="#carousel{{spot.spotId}}" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner" style="height: 100%;">
                     {% for image in spot.images %}
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="{{ image }}" alt="First slide" style="width:auto !important; height:100%">
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="{{ image }}" alt="First slide"
+                            style="width:auto !important; height:100%; margin-left: auto; margin-right: auto;">
                     </div>
                     {% endfor %}
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carousel{{spot.spotId}}" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carousel{{spot.spotId}}" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
@@ -71,12 +75,26 @@
         <div class="spot-info-block">
             <div>
                 <p class="spot-name">{{ spot.name }}</p>
-                <div class="spot-add-icon-block" id="scheduleAdd">
-                    <img src="/dev/static/assets/add-icon.png" class="spot-add-icon">
-                </div>
+                <a class="spot-add-icon-block" style="cursor: pointer">
+                    <img src="/dev/static/assets/add-icon.png" id="as{{ spot.spotId }}" class="spot-add-icon">
+                </a>
             </div>
             <div class="city-desc-block">
                 <span>{{ spot.location }}</span>
+            </div>
+            <a class="spot-collapse-icon" data-toggle="collapse" href="#op{{spot.spotId}}" role="button"
+                aria-expanded="false" aria-controls="op{{spot.spotId}}">
+                <img src="/dev/static/assets/down-triangle.png" style="width:100%">
+            </a>
+        </div>
+    </div>
+    <div class="collapse" id="op{{spot.spotId}}">
+        <div class="spot-detail-block">
+            <div class="spot-desc">
+                <span>{{ spot.description }}</span>
+            </div>
+            <div class="spot-time">
+                <span>Open time: {{ spot.openTime }}</span>
             </div>
         </div>
     </div>
