--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -1,11 +1,12 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="static/styles/ui.css">
-    <link rel="stylesheet" type="text/css" href="static/styles/schedule.css">
-    <link rel="stylesheet" type="text/css" href="static/js/jqwidgets/styles/jqx.base.css">
-    <link rel="stylesheet" type="text/css" href="static/js/jqwidgets/styles/jqx.energyblue.css">
+    <link rel="stylesheet" type="text/css" href="/dev/static/styles/ui.css">
+    <link rel="stylesheet" type="text/css" href="/dev/static/styles/schedule.css">
+    <link rel="stylesheet" type="text/css" href="/dev/static/js/jqwidgets/styles/jqx.base.css">
+    <link rel="stylesheet" type="text/css" href="/dev/static/js/jqwidgets/styles/jqx.energyblue.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
@@ -15,13 +16,15 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <!-- add the jQWidgets framework -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="static/js/jqwidgets/jqx-all.js"></script>
-    <script type="text/javascript" src="static/js/jqwidgets/jqxcore.js"></script>
+    <script type="text/javascript" src="/dev/static/js/jqwidgets/jqx-all.js"></script>
+    <script type="text/javascript" src="/dev/static/js/jqwidgets/jqxcore.js"></script>
     <!-- add one or more widgets -->
-    <script type="text/javascript" src="static/js/jqwidgets/jqxbuttons.js"></script>
-    <script type="text/javascript" src="static/js/jqwidgets/globalization/globalize.js"></script>
-    <script src="static/js/schedule.js"></script>
+    <script type="text/javascript" src="/dev/static/js/jqwidgets/jqxbuttons.js"></script>
+    <script type="text/javascript" src="/dev/static/js/jqwidgets/globalization/globalize.js"></script>
+    <script src="/dev/static/js/schedule.js"></script>
+    <script>
+        var slots = '{{ slots|safe }}'
+    </script>
 </head>
 
 {% block navbar %}
@@ -34,7 +37,7 @@
         <div class="cart-button-row">
             <div class="dropdown cart-dropdown">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">New Schedule</a>
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{scheduleName}}</a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     {% for scheduleItem in scheduleItems %}
@@ -62,9 +65,9 @@
                             </button>
                         </div>
                         <div id="saveScheduleContent" class="modal-body">
-
                         </div>
                         <div class="modal-footer">
+                            <p class="save-error-msg" id="save-error-msg"></p>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             <button type="button" id="saveScheduleBtn" class="btn btn-primary">Save</button>
                         </div>
@@ -75,14 +78,14 @@
 
         <div class="cart-list">
             {% for spot in spots %}
-            <div class="cart-item">
+            <div class="cart-item" id="ci{{spot.spotId}}">
                 <a class="cart-spot-name"> {{ spot.name }} </a>
-                <a class="cart-delete-icon" href="#op{{spot.spotId}}">
-                    <img src="static/assets/delete-icon.png" style="width:100%">
+                <a class="cart-delete-icon">
+                    <img src="/dev/static/assets/delete-icon.png" id="dl{{spot.spotId}}" style="width:100%">
                 </a>
                 <a class="cart-add-icon" data-toggle="collapse" href="#op{{spot.spotId}}" role="button"
                     aria-expanded="false" aria-controls="op{{spot.spotId}}">
-                    <img src="static/assets/add-icon.png" style="width:100%">
+                    <img src="/dev/static/assets/add-icon.png" style="width:100%">
                 </a>
             </div>
             <div class="collapse" id="op{{spot.spotId}}">
@@ -116,32 +119,6 @@
 
     <div class="calendar-block">
         <div id="scheduler">
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-                Add Schedule
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            ...
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
