--- a/app/static/styles/city.css
+++ b/app/static/styles/city.css
@@ -4,7 +4,6 @@
     margin-left: auto;
     margin-right: auto;
     height: 230px;
-    border: 1px solid gray;
     border-radius: 5px;
 }
 
@@ -21,7 +20,6 @@
     margin-top: 6px;
     margin-left: 20px;
     padding: 10px;
-    border: 1px solid gray;
     border-radius: 5px;
 }
 
@@ -31,7 +29,6 @@
     width: 55%;
     height: 95%;
     padding: 10px;
-    border: 1px solid gray;
     border-radius: 5px;
     margin-top: 6px;
     margin-right: 20px;
@@ -68,7 +65,6 @@
     margin-left: auto;
     margin-right: auto;
     height: 600px;
-    border: 1px solid gray;
     border-radius: 5px;
 }
 
@@ -85,8 +81,8 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 25px;
-    border: 1px solid gray;
     border-radius: 5px;
+    background-color: #e9f3f059;
 }
 
 .spot-image-block {
@@ -96,7 +92,6 @@
     margin-top: 5px;
     margin-left: 20px;
     padding: 10px;
-    border: 1px solid gray;
     border-radius: 5px;
 }
 
@@ -112,7 +107,6 @@
     width: 55%;
     height: 95%;
     padding: 10px;
-    border: 1px solid gray;
     border-radius: 5px;
     margin-top: 5px;
     margin-right: 20px;
@@ -153,11 +147,11 @@
     display: block;
     height: 130px;
     width: 90%;
-    border: 1px solid gray;
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
     width: 90%;
+    background-color: #e9f3f059;
 }
 
 .spot-desc {
