--- a/app/templates/city.html
+++ b/app/templates/city.html
@@ -22,85 +22,86 @@
 </head>
 {% block content %}
 
-<div class="city-header">
-    <div class="city-img-block">
-        <img src="/dev/static/assets/delete-icon.png" class="city-img">
-    </div>
-    <div class="city-info-block">
-        <div>
-            <p class="city-name">{{ cityItem.name }}</p>
-            <a class="city-cart-icon-block" id="scheduleDiv" style="cursor: pointer">
-                <img src="/dev/static/assets/cart.png" class="city-cart-icon">
-            </a>
+<body style="background-color: #6f66660f;">
+    <div class="city-header" style="background-color: white;">
+        <div class="city-img-block">
+            <img src="/dev/static/assets/delete-icon.png" class="city-img">
         </div>
-        <div class="city-desc-block">
-            <span>{{ cityItem.country }}</span>
-        </div>
-    </div>
-</div>
-
-<div class="spot-list-block overflow-auto">
-    <div class="spot-list-desc">
-        <span>Attractions in {{ cityItem.name }}: </span>
-    </div>
-
-    {% for spot in spots %}
-    <div class="spot-block">
-        <div class="spot-image-block">
-            <div id="carousel{{spot.spotId}}" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel{{spot.spotId}}" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel{{spot.spotId}}" data-slide-to="1"></li>
-                    <li data-target="#carousel{{spot.spotId}}" data-slide-to="2"></li>
-                    <li data-target="#carousel{{spot.spotId}}" data-slide-to="3"></li>
-                </ol>
-                <div class="carousel-inner" style="height: 100%;">
-                    {% for image in spot.images %}
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="{{ image }}" alt="First slide"
-                            style="width:auto !important; height:100%; margin-left: auto; margin-right: auto;">
-                    </div>
-                    {% endfor %}
-                </div>
-                <a class="carousel-control-prev" href="#carousel{{spot.spotId}}" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel{{spot.spotId}}" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-        <div class="spot-info-block">
+        <div class="city-info-block">
             <div>
-                <p class="spot-name">{{ spot.name }}</p>
-                <a class="spot-add-icon-block" style="cursor: pointer">
-                    <img src="/dev/static/assets/add-icon.png" id="as{{ spot.spotId }}" class="spot-add-icon">
+                <p class="city-name">{{ cityItem.name }}</p>
+                <a class="city-cart-icon-block" id="scheduleDiv" style="cursor: pointer">
+                    <img src="/dev/static/assets/cart.png" class="city-cart-icon">
                 </a>
             </div>
             <div class="city-desc-block">
-                <span>{{ spot.location }}</span>
-            </div>
-            <a class="spot-collapse-icon" data-toggle="collapse" href="#op{{spot.spotId}}" role="button"
-                aria-expanded="false" aria-controls="op{{spot.spotId}}">
-                <img src="/dev/static/assets/down-triangle.png" style="width:100%">
-            </a>
-        </div>
-    </div>
-    <div class="collapse" id="op{{spot.spotId}}">
-        <div class="spot-detail-block">
-            <div class="spot-desc">
-                <span>{{ spot.description }}</span>
-            </div>
-            <div class="spot-time">
-                <span>Open time: {{ spot.openTime }}</span>
+                <span>{{ cityItem.country }}</span>
             </div>
         </div>
     </div>
-    {% endfor %}
-</div>
 
+    <div class="spot-list-block overflow-auto" style="background-color: white;">
+        <div class="spot-list-desc">
+            <span>Attractions in {{ cityItem.name }}: </span>
+        </div>
+
+        {% for spot in spots %}
+        <div class="spot-block">
+            <div class="spot-image-block">
+                <div id="carousel{{spot.spotId}}" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel{{spot.spotId}}" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel{{spot.spotId}}" data-slide-to="1"></li>
+                        <li data-target="#carousel{{spot.spotId}}" data-slide-to="2"></li>
+                        <li data-target="#carousel{{spot.spotId}}" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner" style="height: 100%;">
+                        {% for image in spot.images %}
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="{{ image }}" alt="First slide"
+                                style="width:auto !important; height:100%; margin-left: auto; margin-right: auto;">
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <a class="carousel-control-prev" href="#carousel{{spot.spotId}}" role="button" data-slide="prev" style="background-color: #00000026 !important;">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel{{spot.spotId}}" role="button" data-slide="next" style="background-color: #00000026 !important;">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="spot-info-block">
+                <div>
+                    <p class="spot-name">{{ spot.name }}</p>
+                    <a class="spot-add-icon-block" style="cursor: pointer">
+                        <img src="/dev/static/assets/add-icon.png" id="as{{ spot.spotId }}" class="spot-add-icon">
+                    </a>
+                </div>
+                <div class="city-desc-block">
+                    <span>{{ spot.location }}</span>
+                </div>
+                <a class="spot-collapse-icon" data-toggle="collapse" href="#op{{spot.spotId}}" role="button"
+                    aria-expanded="false" aria-controls="op{{spot.spotId}}">
+                    <img src="/dev/static/assets/down-triangle.png" style="width:100%">
+                </a>
+            </div>
+        </div>
+        <div class="collapse" id="op{{spot.spotId}}">
+            <div class="spot-detail-block">
+                <div class="spot-desc">
+                    <span>{{ spot.description }}</span>
+                </div>
+                <div class="spot-time">
+                    <span>Open time: {{ spot.openTime }}</span>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</body>
 {% endblock %}
 
 </html>
