--- a/app/static/styles/spot.css
+++ b/app/static/styles/spot.css
@@ -1,14 +1,3 @@
-.spot-image-block {
-    display: inline-block;
-    width: 95%;
-    height: 95%;
-    margin-top: 5px;
-    margin-left: 20px;
-    padding: 10px;
-    border: 1px solid gray;
-    border-radius: 5px;
-}
-
 .spot-header {
     margin-top: 10px;
     max-width: 95%;
@@ -21,7 +10,7 @@
 
 .spot-intro-block{
     width: 95%;
-    height: 300px;
+    height: 350px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 25px;
@@ -53,7 +42,7 @@
 .spot-overview {
     display: inline-block;
     width: 95%;
-    height: 45%;
+    height: 55%;
     margin-top: 5px;
     margin-left: 20px;
     padding: 10px;
@@ -61,10 +50,24 @@
     border-radius: 5px;
 }
 
+.spot-overview-text {
+    widows: 60%;
+    display: inline-block;
+}
+.spot-image-block {
+    display: inline-block;
+    width: 30%;
+    height: 95%;
+    padding: 10px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    float: right;
+}
+
 .spot-description {
     display: inline-block;
     width: 95%;
-    height: 50%;
+    height: auto;
     margin-top: 5px;
     margin-left: 20px;
     padding: 10px;
@@ -104,34 +107,51 @@
     padding: 20px;
 }
 
-
-
-/* .rating-star{
-    width:100px;
-} */
-
-.rate-popover {
-color: #c4c4c4;
+.write-review-btn {
+    float: right;
 }
 
-.oneStar {
-color: #3d381c;
+/* rate star *//* rate star */
+*{
+    margin: 0;
+    padding: 0;
+}
+.rate {
+    float: left;
+    height: 46px;
+    padding: 0 10px;
+}
+.rate:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+}
+.rate:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:30px;
+    color:#ccc;
+}
+.rate:not(:checked) > label:before {
+    content: '★ ';
+}
+.rate > input:checked ~ label {
+    color: #ffc700;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+    color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+    color: #c59b08;
 }
 
-.twoStars {
-color: #6d6126;
-}
-
-.threeStars {
-
-color: #c2aa36;
-}
-
-.fourStars {
-color: #e2c327;
-}
-
-.fiveStars {
-color: #f3cb06;
-}
+/* Modified from: https://github.com/mukulkant/Star-rating-using-pure-css */
+/* rate star *//* rate star */
 
