--- a/app/templates/spot.html
+++ b/app/templates/spot.html
@@ -1,11 +1,13 @@
 <html>
-    
+
 <head>
     <link rel="stylesheet" type="text/css" href="/dev/static/styles/ui.css">
     <!-- <link rel="stylesheet" type="text/css" href="/dev/static/styles/city.css"> -->
     <link rel="stylesheet" type="text/css" href="/dev/static/styles/spot.css">
     <link rel="stylesheet" type="text/css" href="/dev/static/js/jqwidgets/styles/jqx.base.css">
     <link rel="stylesheet" type="text/css" href="/dev/static/js/jqwidgets/styles/jqx.energyblue.css">
+    <link rel="stylesheet" type="text/css" href="/dev/static/styles/mdb-plugins-gathered.min.css">
+    <link rel="stylesheet" type="text/css" href="/dev/static/styles/compiled-4.8.1.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -23,42 +25,42 @@
 </head>
 
 {% block content %}
-<div class="spot-header">
-    
-    <div class="spot-image-block">
-        <div id="carousel{{spot.spotId}}" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel{{spot.spotId}}" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel{{spot.spotId}}" data-slide-to="1"></li>
-                <li data-target="#carousel{{spot.spotId}}" data-slide-to="2"></li>
-                <li data-target="#carousel{{spot.spotId}}" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner" style="height: 100%;">
-                {% for image in spot.images %}
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="{{ image }}" alt="First slide"
-                        style="width:auto !important; height:100%; margin-left: auto; margin-right: auto;">
-                </div>
-                {% endfor %}
-            </div>
-            <a class="carousel-control-prev" href="#carousel{{spot.spotId}}" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carousel{{spot.spotId}}" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
-</div>    
+<!-- <div class="spot-header"></div> -->
 
 <div class="spot-intro-block">
     <div class="spot-left-block">
         <div class="spot-overview">
-            <h2 class="spot=name">{{ spot.name }}</h2>
-            <p class="spot-rating">{{ spot.rating }}</p>
-            <p class="spot-review-num">{{ spot.reviewNum }}</p>
+            <div class="spot-overview-text">
+                <h2 class="spot=name">{{ spot.name }}</h2>
+                <p class="spot-rating">{{ spot.rating }}</p>
+                <p class="spot-review-num">{{ spot.reviewNum }}</p>
+            </div>
+            <div class="spot-image-block">
+                <div id="carousel{{spot.spotId}}" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel{{spot.spotId}}" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel{{spot.spotId}}" data-slide-to="1"></li>
+                        <li data-target="#carousel{{spot.spotId}}" data-slide-to="2"></li>
+                        <li data-target="#carousel{{spot.spotId}}" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner" style="height: 100%;">
+                        {% for image in spot.images %}
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="{{ image }}" alt="First slide"
+                                style="width:auto !important; height:100%; margin-left: auto; margin-right: auto;">
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <a class="carousel-control-prev" href="#carousel{{spot.spotId}}" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel{{spot.spotId}}" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
         </div>
 
         <div class="spot-description">
@@ -81,19 +83,47 @@
             </div>
         </div>
 
-        <div class="spot-action">  
-            <span id="rateMe">
-                <i class="fas fa-star py-2 px-1 rate-popover" data-index="0" data-html="true" data-toggle="popover"
-                    data-placement="top" title="Very bad"></i>
-                <i class="fas fa-star py-2 px-1 rate-popover" data-index="1" data-html="true" data-toggle="popover"
-                    data-placement="top" title="Poor"></i>
-                <i class="fas fa-star py-2 px-1 rate-popover" data-index="2" data-html="true" data-toggle="popover"
-                    data-placement="top" title="OK"></i>
-                <i class="fas fa-star py-2 px-1 rate-popover" data-index="3" data-html="true" data-toggle="popover"
-                    data-placement="top" title="Good"></i>
-                <i class="fas fa-star py-2 px-1 rate-popover" data-index="4" data-html="true" data-toggle="popover"
-                    data-placement="top" title="Excellent"></i>
-            </span> 
+        <!-- Rating Star -->
+        <div class="rate">
+            <input type="radio" id="star5" name="rate" value="5" />
+            <label for="star5" title="text">5 stars</label>
+            <input type="radio" id="star4" name="rate" value="4" />
+            <label for="star4" title="text">4 stars</label>
+            <input type="radio" id="star3" name="rate" value="3" />
+            <label for="star3" title="text">3 stars</label>
+            <input type="radio" id="star2" name="rate" value="2" />
+            <label for="star2" title="text">2 stars</label>
+            <input type="radio" id="star1" name="rate" value="1" />
+            <label for="star1" title="text">1 star</label>
+        </div>
+        <button type="button" id="saveRatingBtn" class="btn btn-primary btn-save-rating">Save</button>
+  
+        <!-- Button trigger modal -->
+        <button type="button" id="callWriteReviewBtn" class="btn btn-primary write-review-btn" data-toggle="modal"
+            data-target="#saveModal">
+            Write Reivew
+        </button>
+    
+        <!-- Modal -->
+        <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="saveModelTitle">Write Review</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div id="writeReviewContent" class="modal-body">
+                    </div>
+                    <div class="modal-footer">
+                        <p class="save-error-msg" id="save-error-msg"></p>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" id="saveScheduleBtn" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
