--- a/app/static/styles/schedule.css
+++ b/app/static/styles/schedule.css
@@ -1,4 +1,5 @@
 /* for schedule page */
+
 .schedule-block {
     width: 100%;
     height: 670px;
@@ -7,7 +8,7 @@
 .cart-button-row {
     width: 100%;
     height: 40px;
-    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .cart-dropdown {
@@ -21,13 +22,18 @@
     height: 100%;
 }
 
+.cart-label {
+    font-size: 25px;
+    font-family: sans-serif;
+}
+
 .cart-block {
     float: left;
     width: 28%;
-    height: 90%;
+    height: 97%;
     margin-top: 20px;
     margin-left: 20px;
-    border: 1px solid gray;
+    background-color: white;
     border-radius: 6px;
     padding: 10px;
     display: inline-block;
@@ -45,7 +51,7 @@
 
 .cart-item {
     width: 100%;
-    height: 60px;
+    height: 70px;
     border: 1px solid gray;
     border-radius: 5px;
     margin-top: 10px;
@@ -54,9 +60,16 @@
 .cart-spot-name {
     margin-left: 10px;
     font-size: 16px;
+    margin-top: 10px;
     display: inline-block;
-    margin-top: 15px;
     width: 75%;
+}
+
+.block2:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
 }
 
 .cart-add-icon {
