--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,26 +1,39 @@
-{% extends "bootstrap/base.html" %} {% import "bootstrap/wtf.html" as wtf %} {% block title %}User Register{% endblock title %} {% block navbar %}
-<!-- <h1>Welcom ECE1779 Assignment 3</h1><br> -->
+<head>
+    <link rel="stylesheet" type="text/css" href="/dev/static/styles/ui.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    {% extends "bootstrap/base.html" %}
+    {% import "bootstrap/wtf.html" as wtf %}
+    {% block title %}User Login{% endblock title %}
+</head>
 
-<!--     <ul class="nav nav-tabs">
-        <li class="active"><a href="/index">Home</a></li>
- 
-    </ul> -->
+{% block navbar %}
+<nav class="navbar navbar-expand-lg navbar-dark pink lighten-3 nav-bar-block">
+    <a class="navbar-brand" href="/dev/">Triplan</a>
+</nav>
+{% endblock navbar %}
 
-{%- endblock navbar %} {% block content %}
-<div class="container">
-    {% for message in get_flashed_messages(with_categories=True) %}
-    <div class="alert alert-{{ message[0] }}">
-        <button type="button" class="close" data-dismiss="alert">&times;</button> {{ message[1] }}
+{% block content %}
+
+<body style="background-color: #6f66660f;">
+    <div class="container auth-block">
+        {% for message in get_flashed_messages(with_categories=True) %}
+        <div class="alert alert-{{ message[0] }}">
+            <button type="button" class="close" data-dismiss="alert">&times;</button> {{ message[1] }}
+        </div>
+        {% endfor %}
+
+        <h1> Login</h1>
+
+        <form class_='form' method='POST'>
+            <!-- {{ wtf.quick_form(form)}} -->
+            {{ form.hidden_tag() }} {{ wtf.form_field(form.username) }} {{ wtf.form_field(form.password) }}
+            {{ wtf.form_field(form.submit) }}
+            <a href="/dev/register" class="btn btn-secondary">Register</a>
+        </form>
     </div>
-    {% endfor %}
-
-    <h1> Login</h1>
-
-    <form class_='form' method='POST'>
-        <!-- {{ wtf.quick_form(form)}} -->
-        {{ form.hidden_tag() }} {{ wtf.form_field(form.username) }} {{ wtf.form_field(form.password) }} {{ wtf.form_field(form.submit) }}
-    </form>
-    <br>
-    <button type="button" class="btn"><a href="/dev/register">Register</a></button>
-</div>
+</body>
 {% endblock %}
