--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -18,117 +18,93 @@
     <script>
         var slots = '{{ slots|safe }}'
     </script>
+    {% extends 'nav.html' %}
 </head>
 
-{% block navbar %}
+ {% block content %}
 
-<nav class="navbar navbar-expand-lg navbar-dark pink lighten-3 nav-bar-block">
-    <a class="navbar-brand" href="/dev/">Triplan</a>
-    <!-- Search form -->
-    <form class="form-inline mr-auto search-bar" style="height:25px">
-        <div class="md-form my-0">
-            <input class="form-control search-input" type="text" placeholder="Search" aria-label="Search">
-            <a class="fas fa-search text-white ml-3" aria-hidden="true" href="/dev/search">
-                <img src="/dev/static/assets/search-icon.png" style="height:100%">
-            </a>
-        </div>
-    </form>
-
-    <div class="nav-user-block">
-        <!-- <button type="button" class="btn btnBlock"><a href="/dev/search">Go</a></button> -->
-        {% if is_login == true %}
-        <p class="userTitle" style="display: inline-block;"> Hello, {{ username }} </p>
-        <a style="display: inline-block;margin-top: 0px; margin-left: 10px;" class="btn btn-secondary btn-sm" href="/dev/logout">Logout</a> {% else %}
-        <a style="display: inline-block;margin-top: 18px; margin-left: 10px;" class="btn btn-primary" href="/dev/login">Login</a>
-        <a style="display: inline-block;margin-top: 18px; margin-left: 10px;" class="btn btn-primary" href="/dev/register">Register</a>{% endif %}
-    </div>
-
-    <!-- Collapsible content -->
-
-    <!-- Navbar brand -->
-</nav>
-
-{%- endblock navbar %} {% block content %}
-<div class="schedule-block">
-    <div class="overflow-auto cart-block">
-        <div class="cart-button-row">
-            <div class="dropdown cart-dropdown">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{scheduleName}}</a>
-
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    {% for scheduleItem in scheduleItems %}
-                    <a class="dropdown-item" id="sn{{scheduleItem.scheduleName}}" href="#">{{ scheduleItem.scheduleName }}</a> {% endfor %}
-                    <a class="dropdown-item" id="snNew Schedule" href="#">New Schedule</a>
+<body style="background-color: #6f66660f;">
+    <div class="schedule-block">
+        <div class="overflow-auto cart-block">
+            <p class="cart-label">Your Cart</p>
+            <div class="cart-list">
+                {% for spot in spots %}
+                <div class="cart-item" id="ci{{spot.spotId}}">
+                    <a class="cart-spot-name"> {{ spot.name }} </a>
+                    <a class="cart-delete-icon">
+                        <img src="/dev/static/assets/delete-icon.png" id="dl{{spot.spotId}}" style="width:100%">
+                    </a>
+                    <a class="cart-add-icon" data-toggle="collapse" href="#op{{spot.spotId}}" role="button" aria-expanded="false" aria-controls="op{{spot.spotId}}">
+                        <img src="/dev/static/assets/add-icon.png" style="width:100%">
+                    </a>
                 </div>
-
-            </div>
-            <!-- Button trigger modal -->
-            <button type="button" id="callSaveScheduleBtn" class="btn btn-primary cart-save-btn" data-toggle="modal" data-target="#saveModal">
-                Save Schedule
-            </button>
-            <!-- Modal -->
-            <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="saveModelTitle">Save Schedule</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
+                <div class="collapse" id="op{{spot.spotId}}">
+                    <div class="form-group cart-input-form">
+                        <div class="form-group row cart-input-row">
+                            <label class="col-sm-2 col-form-label cart-input-label">Date: </label>
+                            <div class="col-sm-10 cart-input-div">
+                                <input type="date" class="form-control" name="date" value="2019-12-03" id="dt{{spot.spotId}}">
+                            </div>
                         </div>
-                        <div id="saveScheduleContent" class="modal-body">
+                        <div class="form-group row cart-input-row">
+                            <label class="col-sm-2 col-form-label cart-input-label">Start Time:</label>
+                            <div class="col-sm-10 cart-input-div">
+                                <input type="time" class="form-control" name="startTime" value="09:00" id="st{{spot.spotId}}">
+                            </div>
                         </div>
-                        <div class="modal-footer">
-                            <p class="save-error-msg" id="save-error-msg"></p>
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" id="saveScheduleBtn" class="btn btn-primary">Save</button>
+                        <div class="form-group row cart-input-row">
+                            <label class="col-sm-2 col-form-label cart-input-label">End Time:</label>
+                            <div class="col-sm-10 cart-input-div">
+                                <input type="time" class="form-control" name="endTime" value="11:00" id="et{{spot.spotId}}">
+                            </div>
                         </div>
+                        <input type="submit" class="btn btn-primary cart-add-btn" id="addBtn{{spot.spotId}}" value="add">
                     </div>
                 </div>
+                {% endfor %}
             </div>
         </div>
 
-        <div class="cart-list">
-            {% for spot in spots %}
-            <div class="cart-item" id="ci{{spot.spotId}}">
-                <a class="cart-spot-name"> {{ spot.name }} </a>
-                <a class="cart-delete-icon">
-                    <img src="/dev/static/assets/delete-icon.png" id="dl{{spot.spotId}}" style="width:100%">
-                </a>
-                <a class="cart-add-icon" data-toggle="collapse" href="#op{{spot.spotId}}" role="button" aria-expanded="false" aria-controls="op{{spot.spotId}}">
-                    <img src="/dev/static/assets/add-icon.png" style="width:100%">
-                </a>
-            </div>
-            <div class="collapse" id="op{{spot.spotId}}">
-                <div class="form-group cart-input-form">
-                    <div class="form-group row cart-input-row">
-                        <label class="col-sm-2 col-form-label cart-input-label">Date: </label>
-                        <div class="col-sm-10 cart-input-div">
-                            <input type="date" class="form-control" name="date" value="2019-12-03" id="dt{{spot.spotId}}">
+        <div class="calendar-block">
+            <div class="cart-button-row">
+                <div class="dropdown cart-dropdown">
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{scheduleName}}</a>
+
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        {% for scheduleItem in scheduleItems %}
+                        <a class="dropdown-item" id="sn{{scheduleItem.scheduleName}}" href="#">{{ scheduleItem.scheduleName }}</a> {% endfor %}
+                        <a class="dropdown-item" id="snNew Schedule" href="#">New Schedule</a>
+                    </div>
+
+                </div>
+                <!-- Button trigger modal -->
+                <button type="button" id="callSaveScheduleBtn" class="btn btn-primary cart-save-btn" data-toggle="modal" data-target="#saveModal">
+                        Save Schedule
+                    </button>
+                <!-- Modal -->
+                <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="saveModelTitle">Save Schedule</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                            </div>
+                            <div id="saveScheduleContent" class="modal-body">
+                            </div>
+                            <div class="modal-footer">
+                                <p class="save-error-msg" id="save-error-msg"></p>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" id="saveScheduleBtn" class="btn btn-primary">Save</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group row cart-input-row">
-                        <label class="col-sm-2 col-form-label cart-input-label">Start Time:</label>
-                        <div class="col-sm-10 cart-input-div">
-                            <input type="time" class="form-control" name="startTime" value="09:00" id="st{{spot.spotId}}">
-                        </div>
-                    </div>
-                    <div class="form-group row cart-input-row">
-                        <label class="col-sm-2 col-form-label cart-input-label">End Time:</label>
-                        <div class="col-sm-10 cart-input-div">
-                            <input type="time" class="form-control" name="endTime" value="11:00" id="et{{spot.spotId}}">
-                        </div>
-                    </div>
-                    <input type="submit" class="btn btn-primary cart-add-btn" id="addBtn{{spot.spotId}}" value="add">
                 </div>
             </div>
-            {% endfor %}
+            <div id="scheduler">
+            </div>
         </div>
     </div>
-
-    <div class="calendar-block">
-        <div id="scheduler">
-        </div>
-    </div>
-</div>
+</body>
 {% endblock %}
