--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -1,13 +1,19 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="/dev/static/styles/ui.css">
     <link rel="stylesheet" type="text/css" href="/dev/static/styles/schedule.css">
     <link rel="stylesheet" type="text/css" href="/dev/static/js/jqwidgets/styles/jqx.base.css">
     <link rel="stylesheet" type="text/css" href="/dev/static/js/jqwidgets/styles/jqx.energyblue.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <!-- add the jQWidgets framework -->
     <script type="text/javascript" src="/dev/static/js/jqwidgets/jqx-all.js"></script>
     <script type="text/javascript" src="/dev/static/js/jqwidgets/jqxcore.js"></script>
@@ -21,7 +27,7 @@
     {% extends 'nav.html' %}
 </head>
 
- {% block content %}
+{% block content %}
 
 <body style="background-color: #6f66660f;">
     <div class="schedule-block">
@@ -34,7 +40,8 @@
                     <a class="cart-delete-icon">
                         <img src="/dev/static/assets/delete-icon.png" id="dl{{spot.spotId}}" style="width:100%">
                     </a>
-                    <a class="cart-add-icon" data-toggle="collapse" href="#op{{spot.spotId}}" role="button" aria-expanded="false" aria-controls="op{{spot.spotId}}">
+                    <a class="cart-add-icon" data-toggle="collapse" href="#op{{spot.spotId}}" role="button"
+                        aria-expanded="false" aria-controls="op{{spot.spotId}}">
                         <img src="/dev/static/assets/add-icon.png" style="width:100%">
                     </a>
                 </div>
@@ -43,22 +50,26 @@
                         <div class="form-group row cart-input-row">
                             <label class="col-sm-2 col-form-label cart-input-label">Date: </label>
                             <div class="col-sm-10 cart-input-div">
-                                <input type="date" class="form-control" name="date" value="2019-12-03" id="dt{{spot.spotId}}">
+                                <input type="date" class="form-control" name="date" value="2019-12-03"
+                                    id="dt{{spot.spotId}}">
                             </div>
                         </div>
                         <div class="form-group row cart-input-row">
                             <label class="col-sm-2 col-form-label cart-input-label">Start Time:</label>
                             <div class="col-sm-10 cart-input-div">
-                                <input type="time" class="form-control" name="startTime" value="09:00" id="st{{spot.spotId}}">
+                                <input type="time" class="form-control" name="startTime" value="09:00"
+                                    id="st{{spot.spotId}}">
                             </div>
                         </div>
                         <div class="form-group row cart-input-row">
                             <label class="col-sm-2 col-form-label cart-input-label">End Time:</label>
                             <div class="col-sm-10 cart-input-div">
-                                <input type="time" class="form-control" name="endTime" value="11:00" id="et{{spot.spotId}}">
+                                <input type="time" class="form-control" name="endTime" value="11:00"
+                                    id="et{{spot.spotId}}">
                             </div>
                         </div>
-                        <input type="submit" class="btn btn-primary cart-add-btn" id="addBtn{{spot.spotId}}" value="add">
+                        <input type="submit" class="btn btn-primary cart-add-btn" id="addBtn{{spot.spotId}}"
+                            value="add">
                     </div>
                 </div>
                 {% endfor %}
@@ -68,28 +79,32 @@
         <div class="calendar-block">
             <div class="cart-button-row">
                 <div class="dropdown cart-dropdown">
-                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{scheduleName}}</a>
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{scheduleName}}</a>
 
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         {% for scheduleItem in scheduleItems %}
-                        <a class="dropdown-item" id="sn{{scheduleItem.scheduleName}}" href="#">{{ scheduleItem.scheduleName }}</a> {% endfor %}
+                        <a class="dropdown-item" id="sn{{scheduleItem.scheduleName}}"
+                            href="#">{{ scheduleItem.scheduleName }}</a> {% endfor %}
                         <a class="dropdown-item" id="snNew Schedule" href="#">New Schedule</a>
                     </div>
 
                 </div>
                 <!-- Button trigger modal -->
-                <button type="button" id="callSaveScheduleBtn" class="btn btn-primary cart-save-btn" data-toggle="modal" data-target="#saveModal">
-                        Save Schedule
-                    </button>
+                <button type="button" id="callSaveScheduleBtn" class="btn btn-primary cart-save-btn" data-toggle="modal"
+                    data-target="#saveModal">
+                    Save Schedule
+                </button>
                 <!-- Modal -->
-                <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal fade" id="saveModal" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="saveModelTitle">Save Schedule</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
                             </div>
                             <div id="saveScheduleContent" class="modal-body">
                             </div>
