--- a/app/templates/spot.html
+++ b/app/templates/spot.html
@@ -23,6 +23,7 @@
     <script src="/dev/static/js/spot.js"></script>
     <script type="text/javascript">
         var userRating = '{{ userRating }}'
+        var userReview = '{{ userReview }}'
         // var userRating = 3
     </script>
 </head>
@@ -114,7 +115,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="saveModelTitle">Write Review</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" id='close'>
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -129,7 +130,7 @@
                     </div>
                     <div class="modal-footer">
                         <p class="save-error-msg" id="save-error-msg"></p>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeReviewBox">Close</button>
                         <button type="button" id="saveReviewBtn{{ spot.spotId }}" class="btn btn-primary">Save</button>
                     </div>
                 </div>
@@ -141,10 +142,10 @@
 <div class="spot-review-block">
     <h3>Review</h3>
 
-    {% for review in reviews %}
-    <div class="spot-review-blolck">
-        <p class="spot-review-name">{{ review.userName }}</p>
-        <p class="spot-user-rating">{{ review.rating }}</p>
+    {% for userName, review in reviews.items() %}
+    <div class="user-review">
+        <h5 class="spot-review-name">{{ userName }}</h5>
+        <p class="spot-user-rating">{{ review }}</p>
     </div>
     {% endfor %}
 
