--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,9 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/ui.css') }}">
+	<link rel="stylesheet" type="text/css" href="static/styles/auto.css">
+	<script src="static/js/auto.js"></script>
+	
 
-	<script type="text/javascript" href="{{ url_for('static',filename='js/auto.js') }}"></script>
 
     {% extends "bootstrap/base.html" %}
 	{% import "bootstrap/wtf.html" as wtf %}
@@ -12,24 +14,7 @@
 
 {% block navbar %}
 
-<!-- 	<div class="topnav">
-	<a class="active" href="#home">Home</a> -->
-<!-- 	<a href="#about">About</a>
-	<a href="#contact">Contact</a> -->
 	<h2>Welcome!</h2>
-
-<!-- 	<div class="topnav">
-	<a class="active" href="#home">Home</a>
-	<a href="#about">About</a>
-	<a href="#contact">Contact</a>
-	<input type="text" placeholder="Search..">
-	</div> -->
-    <!-- <h1>Welcom ECE1779 Assignment 3</h1><br> -->
-
-<!--     <ul class="nav nav-tabs">
-        <li class="active"><a href="/index">Home</a></li>
-      
-    </ul> -->
 
 {%- endblock navbar %}
 
@@ -38,31 +23,30 @@
 
 {% block content %}
 	
-<!-- 	<form autocomplete="off" action="/action_page.php">	
-	<div class="autocomplete" style="width:200px;">
-		<input id="myInput" type="text" placeholder="Search.." name="myCountry">
-			
-	</div>
-	<button type="submit">Go</button>
-	</form> -->
 	
 <div class="container">	
-<!-- <script>autocomplete(document.getElementById("myInput"), cities);</script> -->
+
 		{% for message in get_flashed_messages(with_categories=True) %}
 		<div class="alert alert-{{ message[0] }}">
 				<button type="button" class="close" data-dismiss="alert">&times;</button>
 				{{ message[1] }}
 		</div>
 		{% endfor %}
-	
+		
 
-		<form class='form' method='POST'>
-                <!-- {{ wtf.quick_form(form)}} -->
-			{{ form.hidden_tag() }}
-			{{ wtf.form_field(form.search) }}
+		<form autocomplete="off" method="post" >
+		<div class="autocomplete" style="width:300px;">
+			<input name="inputcity" id="myInput" type="text" placeholder="Search" >
+		</div>
+		<input type="submit" >
+
 
         </form>
-		<button type="button" class="btn btnBlock"><a href="/search">Go</a></button>
+		<script>
+		autocomplete(document.getElementById("myInput"), cities);
+		</script> 
+	<!-- 	<button type="button" class="btn btnBlock"><a href="/search">Go</a></button> -->
+		<br>
 		{% if is_login == true %}
 			<p class="userTitle"> Hello, {{ username }} </p>
 			<button type="button" class="btn btnBlock"><a href="/logout">Logout</a></button>
