Fix spot rating and review \n problem

--- a/app/static/styles/spot.css
+++ b/app/static/styles/spot.css
@@ -1,3 +1,8 @@
+.btn-back-city {
+    background-color: #a1b6d3 !important;
+    color: white !important;
+}
+
 .spot-header {
     margin-top: 10px;
     max-width: 95%;
