change utc to est, adapt to matched month

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -15,7 +15,7 @@
 {% block navbar %}
 
 <nav class="navbar navbar-expand-lg navbar-dark pink lighten-3 nav-bar-block">
-    <a class="navbar-brand" href="/dev/">Triplan</a>
+    <a class="navbar-brand" href="/dev/">TripScheduler</a>
     <!-- Search form -->
     <form class="form-inline mr-auto search-bar" autocomplete="off" style="height:25px" method="post">
         <div class="md-form my-0 autocomplete">
